- https://github.com/eclipse-syson/syson/issues/1125[#1125] [general-view] Simplify "Done" and "Start" actions
- https://github.com/eclipse-syson/syson/issues/1131[#1131] [diagrams] Allow `NamespaceImport` graphical node labels to be wrapped to handle long names more easily.

=== New features

- https://github.com/eclipse-syson/syson/issues/1078[#1078] [publication] Add support for publishing the SysML contents of a project as a library.
- https://github.com/eclipse-syson/syson/issues/1109[#1109] [publication] Add support for importing published libraries as dependencies of a project.
- https://github.com/eclipse-syson/syson/issues/1118[#1118] [publication] Add support for updating the version of a library used as a dependency of a project.


== v2025.2.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/987[#987] Implementation of drag and drop in SysOn Explorer view
* A new service has been added to centralize the behavior of moving semantic elements in _org.eclipse.syson.services.api.ISysMLMoveElementService_.
It replaces the public methods _UtilService.moveMembership_ and _ToolService.moveSemanticElement_
* A new service has been added to centralize the verification of read-only elements in _org.eclipse.syson.services.api.ISysMLReadOnlyService_.
- https://github.com/eclipse-syson/syson/issues/1018[#1018] `SysMLStandardLibrariesConfiguration` has been refactored and renamed `SysONDefaultLibrariesConfiguration`.

=== Dependency update

- Switch to Sirius Web 2025.2.0
- https://github.com/eclipse-syson/syson/issues/953[#953] [rest-apis] Backend module `syson-sysml-rest-api-services` now depends on `jackson-datatype-jsr310` for JSON dates serialization
- https://github.com/eclipse-syson/syson/issues/1023[#1023] [releng] Switch to SysIDE 0.8.0
- Upgrade `turbo` to version 2.3.3
- Switch to Spring Boot 3.4.1

=== Bug fixes
