@@ -135,6 +135,7 @@ The importer can now import SysML files that contain `FeatureChainingExpression`
 - https://github.com/eclipse-syson/syson/issues/1120[#1120] [general-view] Add a graphical edge to represent the composition between `OccurrenceDefinition` and its `OccurrenceUsages`.
 - https://github.com/eclipse-syson/syson/issues/1125[#1125] [general-view] Simplify "Done" and "Start" actions
 - https://github.com/eclipse-syson/syson/issues/1131[#1131] [diagrams] Allow `NamespaceImport` graphical node labels to be wrapped to handle long names more easily.
+- https://github.com/eclipse-syson/syson/issues/1143[#1143] [export] Implement textual export of `Decision Transition Usages`.
 
 === New features
 
